--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,10 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+
+.layout {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
